gen/content/v2/cargo-errors.log
    Checking google-content2 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/content/v2/lib)
error[E0412]: cannot find type `ListStatusesItems` in module `crate::resources::orders::params`
     --> content/v2/lib/src/lib.rs:22190:68
      |
22190 |             statuses: Option<Vec<crate::resources::orders::params::ListStatusesItems>>,
      |                                                                    ^^^^^^^^^^^^^^^^^ not found in `crate::resources::orders::params`

error[E0412]: cannot find type `ListStatusesItems` in module `crate::resources::orders::params`
     --> content/v2/lib/src/lib.rs:22233:72
      |
22233 |                 value: impl Into<Vec<crate::resources::orders::params::ListStatusesItems>>,
      |                                                                        ^^^^^^^^^^^^^^^^^ not found in `crate::resources::orders::params`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0412`.
error: Could not compile `google-content2`.

To learn more, run the command again with --verbose.
